--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "array-move": "^4.0.0",
+    "cors": "^2.8.5",
     "react": "^16.14.0",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^16.14.0",
     "react-ordering": "0.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^2.1.3",
     "react-tsparticles": "^1.37.5",
     "web-vitals": "^1.1.2"
   },
